added clearfix for opps by date

--- a/wp-content/themes/vdc_DEV/app/js/opps/html/list.tmpl.html
+++ b/wp-content/themes/vdc_DEV/app/js/opps/html/list.tmpl.html
@@ -1,4 +1,4 @@
-<div class="opportunities" ng-if="opps.length > 0">
+<div class="opportunities opps-clearfix" ng-if="opps.length > 0">
   <div class="opps-item" ng-repeat="opp in opps track by $index">
     <div class="row opportunity-item">
       <div class="col-xs-6 col-md-3 sub-item">
